# Nomic-old

./: .gitignore  .travis.yml  README.md  index.html  params.json  sendNomic
Nomic/: Nomic.cabal  TODO
Nomic-Rules/: Nomic-Rules.cabal
Nomic-Rules/examples/: Examples.hs
Nomic-Rules/src/: Evaluation.hs  Examples.hs  Expression.hs  Observable.hs  Rule.hs  Test.hs
Nomic-Rules/src/Language/Nomic/: Evaluation.hs  Expression.hs  Rule.hs
Nomic-Rules/tests/: Test.hs
Nomic/data/static/css/: nomic.css
Nomic/doc/: Haskell Nomic EN.docx
Nomic/src/: Action.hs  Comm.hs  Commands.hs  Game.hs  Interpret.hs  Main.hs  Mono.hs  Multi.hs  NamedRule.hs  Server.hs  Test.hs  Utils.hs  Web.hs
Nomic/src/dummy/: Paths_Nomic.hs
Nomyx/: TODO
Nomyx-Language/: Nomyx-Language.cabal  README
Nomyx-Language/src/Language/: Nomyx.hs  NomyxAPI.hs
Nomyx-Language/src/Language/Nomyx/: Definition.hs  Engine.hs  Evaluation.hs  Events.hs  Examples.hs  Expression.hs  Game.hs  Inputs.hs  Outputs.hs  Players.hs  Rule.hs  Rules.hs  Test.hs  Utils.hs  Variables.hs  Vote.hs
Nomyx-Language/src/Language/Nomyx/Engine/: Evaluation.hs  Game.hs  GameEvents.hs  Test.hs  Utils.hs
Nomyx-Rules/: Nomyx-Rules.cabal
Nomyx-Rules/examples/: Examples.hs
Nomyx-Rules/src/Language/Nomyx/: Evaluation.hs  Examples.hs  Expression.hs  Rule.hs  Test.hs
Nomyx-Rules/tests/: Test.hs
Nomyx/src/: Test.hs
website/: index.html  upload.sh
website/archives/TheCastleBuilders/: Castle.hs  Money2.hs  advanced.html
website/nomyx_html/: index.html
website/nomyx_html/archives/TheCastleBuilders/: Date01.hs  Expression.hs  Rule.hs  Tournament01.hs  Vote2.hs  player-settings.html
website/public_html/archives/TheCastleBuilders/: main-page2.html
website/public_html/stylesheets/: stylesheet.css
