name: Nomic-Rules
version: 0.0.1
cabal-version: -any
build-type: Simple
license: BSD3
license-file: ""
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
build-depends: base -any, containers -any, ghc-binary -any,
               hint-server -any, mtl ==2.*, old-locale -any, stm -any,
               time >=1.4.0.1, time-recurrence >0.9
stability: Experimental
homepage:
package-url:
bug-reports:
synopsis: Language to express rules for Nomic
description: .
category:
author: Corentin Dupont
tested-with:
data-files:
data-dir: ""
extra-source-files: examples/Examples.hs tests/Test.hs
extra-tmp-files:
exposed-modules: Examples Language.Nomic.Evaluation
                 Language.Nomic.Expression Language.Nomic.Rule Test
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: examples src tests
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: