name: Nomic-Rules
version: 0.0.1
cabal-version: -any
build-type: Simple
license: BSD3
license-file: ""
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Language to express rules for Nomic
description: .
author: Corentin Dupont
data-dir: ""
extra-source-files: examples/Examples.hs tests/Test.hs
 
library
    build-depends: base -any, containers -any, ghc -any,
                   hint-server -any, hslogger -any, mtl -any, old-locale -any,
                   stm -any, time -any, time-recurrence -any
    exposed-modules: Examples Language.Nomic.Evaluation
                     Language.Nomic.Expression Language.Nomic.Rule Test
    exposed: True
    buildable: True
    hs-source-dirs: examples src tests
 