name: Nomic
version: 0.0.1
cabal-version: -any
build-type: Simple
license: OtherLicense
license-file: ""
copyright:
maintainer: Corentin.dupont@gmail.com
build-depends: MonadCatchIO-mtl -any, Nomic-Rules -any,
               QuickCheck -any, base <5, binary -any, blaze-html -any,
               bytestring -any, containers -any, digestive-functors -any,
               digestive-functors-blaze -any, digestive-functors-happstack -any,
               eprocess -any, happstack-server -any, happstack-state -any,
               hint -any, hint-server -any, monad-loops -any, mtl -any,
               network -any, parsec -any, regular -any, safe -any, stm -any,
               text -any, utf8-string -any, web-routes >=0.23,
               web-routes-happstack -any, web-routes-regular -any
stability:
homepage:
package-url:
bug-reports:
synopsis: A Nomic game in haskell, featuring automatic, machine-executed rules
description: A Nomic game in Haskell, with a dedicated language to create new rules.
             .
             www.nomic.net
             .
             Nomic is a fabulous and strange game where you have the right to change the rules in the middle of the game!
             Indeed, changing the rules is the goal of the game. Changing a rule is considered as a move. Of course even that could be changed!
category: game
author: Corentin Dupont
tested-with:
data-files: static/css/nomic.css
data-dir: data
extra-source-files: TODO
extra-tmp-files:
 
executable: Nomic
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: CPP
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Web Comm NamedRule Game Test Multi Server Utils
               Action Interpret Web Commands
ghc-prof-options:
ghc-shared-options:
ghc-options: -W
hugs-options:
nhc98-options:
jhc-options:
