name: Nomyx-Rules
version: 0.0.1
cabal-version: -any
build-type: Simple
license: BSD3
license-file: ""
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Language to express rules for Nomyx
description: .
author: Corentin Dupont
data-dir: ""
extra-source-files: examples/Examples.hs tests/Test.hs
cabal-version: >= 1.2 
library
    build-depends: base -any, containers -any, ghc -any,
                   hint-server -any, hslogger -any, mtl -any, old-locale -any,
                   stm -any, time -any, time-recurrence -any
    exposed-modules: Examples Language.Nomyx.Evaluation
                    Language.Nomyx.Expression Language.Nomyx.Rule Test
    exposed: True
    buildable: True
    hs-source-dirs: examples src tests
 
